# nlp-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: model_deployment.md
ml/: vocabulary.pth
src/: logger.py  main.py  utils.py  version.py
tests/unit/: test_main.py
